# speeding-up-python

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build_rust.sh  build_rust_debug.sh  pyproject.toml  setup.py
data/wikipediaArticles/: ara_0123457980635746655897.txt  ara_0142817459119270086098.txt  ara_01516015436812630735.txt  ara_0181229771169825475085.txt  ara_0182747582383104352126.txt  ara_0202365288158130814473.txt  ara_0217094319191094373746.txt  ara_0263550242445421194738.txt  ara_0294338513405307871353.txt  ara_0297031551143401552352.txt  ara_0304221659834913735195.txt  ara_0324900775803807149459.txt  ara_0341268204700048482999.txt  ara_0370983728479791372413.txt  ara_0392006696444585685329.txt  ara_0394842696950932862060.txt  ara_0395288682071868001449.txt  ara_04039146909984921046.txt  ara_04076502649807864721100.txt  ara_04078353446076048835.txt  ara_041879955491922739658.txt  ara_0455799629389369828071.txt  ara_0469335156060941246490.txt  ara_0503361652076366447690.txt  ara_050507201046573383380.txt  ara_052472165788932239484.txt  ara_0561433577532019540939.txt  ara_0582522404833568644976.txt  ara_0601439471147769902817.txt  ara_06021415507143541468100.txt  ara_0604094948590856703214.txt  ara_0611184825406180971336.txt  ara_0629296687442790958948.txt  ara_0631266144820381914279.txt  ara_069047955362203744115.txt  ara_070694070665463776513.txt  (+964 more)
pymetrics/: benchmark.py  benchmark_runner.py  cpp_solver.py  cython_backend.pyx  cython_solver.py  julia_solver.py  main.py  numba_solver.py  python_solver.py
pymetrics/cpp/: setup.py  (+1 more)
pyspeed/: benchmark.py  benchmark_helpers.py  benchmark_result.py  benchmark_runner.py  benchmark_solver.py  cpp_pyb11_solver.py  cpp_solver.py  cython_backend.pyx  cython_solver.py  julia_solver.py  main.py  numba_solver.py  python_solver.py  rust_solver.py  snippet-test.py
src/: benchmark.py  cython_solver.py  main.py  numba_solver.py  pyspeed.rs
tests/: test_benchmark_solvers.py
(+18 files in other folders)
