[tool.poetry]
name = "speeding-up-python"
version = "0.1.0"
description = ""
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numba = "^0.53.1"
Cython = "^0.29.23"
julia = "^0.5.6"
pandas = "^1.2.4"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
