[tool.poetry]
name = "pyspeed"
version = "0.1.0"
description = ""
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]
license = "MIT License"
packages = [{ include = "pyspeed" }]



[tool.poetry.dependencies]
python = "^3.9,<3.10"
numpy = "^1.23.4"
numba = "^0.56.4"
Cython = "^0.29.24"
julia = "^0.5.6"
pandas = "^1.3.2"
pybind11 = "^2.7.1"
joblib = "^1.0.1"
murmurhash = "^1.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
